--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30sp"
         android:orientation="horizontal">
 
         <RelativeLayout
@@ -24,6 +25,8 @@
             android:layout_centerHorizontal="true"
             android:layout_weight="4"
             android:text="Take a Picture"
+            android:textSize="18sp"
+            android:id="@+id/camera"
             android:textAllCaps="false" />
 
         <RelativeLayout
@@ -35,8 +38,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:textSize="18sp"
             android:layout_weight="4"
             android:text="Choose a Picture"
+            android:id="@+id/gallery"
             android:textAllCaps="false" />
 
         <RelativeLayout
