--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,48 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:layout_width="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10sp"
         android:id="@+id/imageView"
-        android:layout_height="wrap_content"/>
-
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="10sp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50sp"
+        android:background="@drawable/orange_btn"
+        android:paddingLeft="30sp"
+        android:paddingRight="30sp"
+        android:text="Get Results"
+        android:textAllCaps="false"
+        android:textColor="#fff"
+        android:textSize="22sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="30sp"
-        android:orientation="horizontal">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imageView" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="#FF993E"
+        app:layout_constraintBottom_toTopOf="@+id/ll"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFE5B2"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -29,14 +56,16 @@
             android:layout_weight="3" />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_weight="4"
-            android:text="Take a Picture"
-            android:textSize="18sp"
             android:id="@+id/camera"
-            android:textAllCaps="false" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20sp"
+            android:layout_marginBottom="30sp"
+            android:layout_weight="4"
+            android:background="@drawable/round_white"
+            android:text="Take a Picture"
+            android:theme="@style/buttonStyle" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -44,14 +73,16 @@
             android:layout_weight="3" />
 
         <Button
+            android:id="@+id/gallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:textSize="18sp"
+            android:layout_marginTop="20sp"
+            android:layout_marginBottom="30sp"
             android:layout_weight="4"
+            android:background="@drawable/round_white"
             android:text="Choose a Picture"
-            android:id="@+id/gallery"
-            android:textAllCaps="false" />
+            android:theme="@style/buttonStyle" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
