--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <style name="buttonStyle">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">#FF9537</item>
+        <item name="android:textSize">18sp</item>
+    </style>
 </resources>
