Small UI Additions

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,19 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="20sp" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="italic"
+        android:text="You haven't chosen a\npicture yet."
+        android:textColor="#000"
+        android:textSize="25sp"
+        android:textAlignment="center"
+        android:layout_marginTop="250sp"
+        android:id="@+id/text"
+        android:layout_marginLeft="30sp"
+        android:layout_marginRight="30sp"
+/>
     <Button
         android:id="@+id/next"
         android:layout_width="wrap_content"
