Displaying image on Results Page

--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -19,13 +19,14 @@
 
     <ImageView
         android:id="@+id/image_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_baseline_image_24" />
+        android:layout_marginLeft="30sp"
+        android:layout_marginRight="30sp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
